--- a/register/project/app/templates/home.html
+++ b/register/project/app/templates/home.html
@@ -1,10 +1,31 @@
-<a href="{% url 'register' %}">
-    Register
+<a href="{% url 'siddhant' %}">
+    Siddhant
 </a>
 
-<form action="{% url 'login' %}" method="post">
+{% comment %}
+<!-- <form action="{% url 'login' %}" method="post">
     {% csrf_token %}
 
     <button type="submit">Login</button>
 
+</form> -->
+
+{% endcomment %}
+
+<form action="{% url 'register' %} " method="POST">
+    {% csrf_token %}
+    <label for="">Name</label>
+    <input type="text" name="nm">
+    <br>
+    <label for="">Email</label>
+    <input type="email" name="em">
+    <br>
+    <label for="">Contact</label>
+    <input type="tel" name="con">
+    <br>
+    <label for="">Password</label>
+    <input type="password" name="pass">
+    <br>
+    <button type="submit">Register</button>
 </form>
+
