--- a/login/project/app/templates/login.html
+++ b/login/project/app/templates/login.html
@@ -8,6 +8,8 @@
 <body>
     <h1 align="center">----------Login Page-----------</h1>
     <div align="center">
+        {{msg}}
+
     {% comment %}
     <!-- <form action="{% url 'userlogin' %}" method="post"> -->
 
