--- a/model/project/app/templates/home.html
+++ b/model/project/app/templates/home.html
@@ -1,3 +1,18 @@
 <a href="{% url 'register' %}"> Register</a> <br>
 
-<a href="{% url 'login' %}">Login </a>
+<a href="{% url 'login' %}">Login </a> <br>
+
+{% comment "" %}
+<!-- <a href="{% url 'first' %}">First </a> <br>
+
+<a href="{% url 'last' %}">Last</a> <br>
+
+<a href="{% url 'earliest' %}">Earliest</a> <br> -->
+
+{% endcomment %}
+
+
+
+<a href="{% url 'all_details' %}">All details</a> <br>
+
+<a href="{% url 'filter' %}">Filter</a> <br>
