--- a/model/project/app/templates/home.html
+++ b/model/project/app/templates/home.html
@@ -16,3 +16,7 @@
 <a href="{% url 'all_details' %}">All details</a> <br>
 
 <a href="{% url 'filter' %}">Filter</a> <br>
+
+
+<a href="{% url 'exclude' %}">Exclude</a> <br>
+<a href="{% url 'my_filter' %}">FIlter</a> <br>
